syntax = "proto3";
package services;
option go_package = "../;proto";
message GetFavoriteStatus_Request{
    int64 user_id=1;
    int64 video_id=2;
}

message GetFavoriteStatus_Response{
  bool isFavorite=1;

}
service  ToVideoService{
  rpc GetFavoriteStatus(GetFavoriteStatus_Request)returns(GetFavoriteStatus_Response);
}